# boa

./:  test_arrow.js  '  .editorConfig  .editorconfig  .gitattributes  .gitignore  .prettierignore  .travis.yml  0.index.js  0.js  1.index.js  1.js  10.index.js  10.js  11.index.js  11.js  1134.js  1156.js  12.index.js  12.js  13.index.js  13.js  14.index.js  14.js  15.index.js  15.js  16.index.js  16.js  17.index.js  17.js  18.index.js  18.js  1886.js  19.index.js  19.js  2.index.js  2.js  20.index.js  20.js  2075.js  (+290 more)
benches/: Cargo.toml  boa.rs  exec.rs  fib.rs  notepad test.js  parser_benchmark.rs  string.rs
benches/benches/: scripts.rs  string_slice.rs
benches/scripts/basic/: call-loop.js  closure.js  nested-loop.js  this-arrow.js
benches/scripts/calls/: call_arrow.js  call_async.js  call_construct.js  call_simple.js  call_spread.js
benches/scripts/closures/: create.js  invoke.js
benches/scripts/intl/: collator-compare.js  collator-construction.js  datetimeformat-construction.js  datetimeformat-format.js  datetimeformat-formattoparts.js  datetimeformat-with-options.js  datetimeformat_resolved_options.js  listformat-construction.js  listformat-format.js  numberformat-construction.js  numberformat-different-options.js  pluralrules-construction.js  pluralrules-select.js  segmenter-construction.js  segmenter-segment.js
benches/scripts/json/: stringify_circular.js  stringify_deep.js
benches/scripts/properties/: access.js
benches/scripts/prototypes/: chain.js
benches/scripts/strings/: concat.js  replace.js  slice.js  split.js
benches/scripts/v8-benches/: README.md  crypto.js  deltablue.js  earley-boyer.js  navier-stokes.js  raytrace.js  regexp.js  richards.js  splay.js
benches/src/: lib.rs
boa/: Cargo.toml  clippy.toml
boa/benches/: README.md  constants.rs  consts.rs  exec.rs  fib.rs  full.rs  lexer.rs  parser.rs  string.rs
boa/benches/bench_scripts/: arithmetic_operations.js  arithmetic_operations.rs  array_access.js  array_access.rs  array_concat.js  array_create.js  array_create.rs  array_pop.js  array_pop.rs  boolean_object_access.js  boolean_object_access.rs  expression.js  expression.rs  fibonacci.js  fibonacci.rs  for_loop.js  for_loop.rs  goal_symbol_switch.js  goal_symbol_switch.rs  hello_world.js  hello_world.rs  long_repetition.js  long_repetition.rs  number_object_access.js  number_object_access.rs  object_creation.js  (+23 more)
boa/examples/: classes.rs  closures.rs  jsarray.rs
boa/src/: bigint.rs  bytecompiler.rs  class.rs  consts.rs  context.rs  environments.rs  exec.rs  gc.rs  hash.rs  lib.rs  profiler.rs  realm.rs  string.rs  symbol.rs  tests.rs  wasm.rs
boa/tests/: compiler.rs
boa_ast/: Cargo.toml
boa_ast/src/: keyword.rs  lib.rs  operations.rs  pattern.rs  position.rs  property.rs  punctuator.rs  statement_list.rs  temporal.rs  visitor.rs
boa_builtins/: Cargo.toml  README.md  build.rs
boa_builtins/src/: lib.rs
boa_cli/: Cargo.toml
boa_cli/src/: helper.rs  main.rs
boa_engine/: Cargo.toml
boa_engine/benches/: full.rs
boa_engine/examples/: classes.rs  jsarray.rs
boa_engine/fuzz/: Cargo.toml  README.md
boa_engine/src/: bigint.rs  bytecompiler.rs  class.rs  context.rs  error.rs  function.rs  host_defined.rs  job.rs  lib.rs  native_function.rs  nonmaxu32.rs  realm.rs  script.rs  string.rs  symbol.rs  tagged.rs  tests.rs
boa_examples/: Cargo.toml  README.md
boa_examples/scripts/: calc.js  calctest.js  console.js  enhancedglobal.js
boa_examples/src/: classes.rs  closures.rs  enhancedglobal.rs  jsarray.rs  loadfile.rs  loadstring.rs  main.rs  modulehandler.rs
boa_ffi/: .gitignore  Cargo.toml  README.md  build.rs
boa_ffi/src/: lib.rs  tests.rs
boa_ffi/test/: .gitignore  Makefile  boa_test.c  build
boa_gc/: Cargo.toml
boa_gc/derive_macros/: Cargo.toml  cargo.toml
boa_gc/src/: cell.rs  gc_box.rs  heap_box.rs  lib.rs  trace.rs
boa_gc/tests/: allocation.rs  boa.rs  promotions.rs
boa_icu_provider/: Cargo.toml  README.md
boa_icu_provider/data/: normalization.postcard
boa_icu_provider/src/: lib.rs
boa_inputgen/: Cargo.toml
boa_inputgen/src/: data.rs  ident_walk.rs  lib.rs
boa_interner/: Cargo.toml
boa_interner/src/: fixed_string.rs  interned_str.rs  lib.rs  raw.rs  sym.rs  tests.rs
boa_macros/: Cargo.toml
boa_macros/src/: lib.rs
boa_macros/tests/: tests.rs
boa_macros_tests/: Cargo.toml
boa_macros_tests/tests/: tests.rs
boa_parser/: Cargo.toml  test.js
boa_parser/src/: error.rs  lib.rs  source.rs
boa_profiler/: Cargo.toml
boa_profiler/src/: lib.rs
boa_runtime/: Cargo.toml
boa_runtime/src/: lib.rs
boa_shell/: Cargo.toml
boa_temporal/: Cargo.toml  README.md
boa_temporal/src/: calendar.rs  date.rs  datetime.rs  duration.rs  error.rs  fields.rs  instant.rs  iso.rs  lib.rs  month_day.rs  options.rs  time.rs  tz.rs  utils.rs  year_month.rs  zoneddatetime.rs
boa_tester/: Cargo.toml
boa_tester/src/: edition.rs  exec.rs  main.rs  read.rs  results.rs
boa_types/: Cargo.toml
boa_types/src/: lib.rs  symbol.rs
boa_unicode/: Cargo.toml  README.md  build_tables.js  package.json
boa_unicode/src/: lib.rs  tables.rs  tests.rs
boa_wasm/: Cargo.toml
boa_wasm/e2e_test/: boa_demo.spec.ts  server.mjs
boa_wasm/src/: lib.rs
cli/: ABOUT.md  Cargo.toml  README.md
cli/src/: executor.rs  helper.rs  logger.rs  main.rs
cli/tests/: exit_code.rs
examples/: Cargo.toml
examples/scripts/: console.js  enhancedglobal.js  helloworld.js
examples/src/: loadfile.rs  loadstring.rs  modulehandler.rs  returnval.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bytecompiler-implied.rs  common.rs  interp_fuzzer.rs  parser-idempotency.rs  syntax_fuzzer.rs  syntax_idempotency_fuzzer.rs  vm-implied.rs
tester/: Cargo.toml
tester/src/: exec.rs  main.rs  read.rs
tests/: Cargo.toml  lexer_test.rs  string_test.rs  value_test.rs
tests/fuzz/: .gitignore  Cargo.toml  README.md
tests/insta-bytecode/: Cargo.toml  README.md
tests/js/: defineVar.js  test.js
tests/macros/: Cargo.toml
tests/src/: lib.rs  wasm_parser_test.rs
tests/tester/: Cargo.toml
tests/wpt/: Cargo.toml  build.rs
(+32281 files in other folders)
