[package]
name = "Boa"
version = "0.10.0"
authors = ["boa-dev"]
description = "Boa is a Javascript lexer, parser and Just-in-Time compiler written in Rust. Currently, it has support for some of the language."
repository = "https://github.com/boa-dev/boa"
keywords = ["javascript", "compiler", "lexer", "parser", "js"]
categories = ["parser-implementations", "wasm"]
license = "Unlicense/MIT"
exclude = ["../.vscode/*", "../Dockerfile", "../Makefile", "../.editorConfig"]
edition = "2018"

[features]
profiler = ["measureme", "once_cell"]

# Enable Boa's WHATWG console object implementation.
console = []

[dependencies]
gc = { version = "0.3.6", features = ["derive"] }
serde_json = "1.0.59"
rand = "0.7.3"
num-traits = "0.2.12"
regress = "0.2.0"
rustc-hash = "1.1.0"
num-bigint = { version = "0.3.0", features = ["serde"] }
num-integer = "0.1.44"
bitflags = "1.2.1"
indexmap = "1.6.0"
ryu-js = "0.2.1"
chrono = "0.4.19"

# Optional Dependencies
serde = { version = "1.0.117", features = ["derive"], optional = true }
measureme = { version = "9.0.0", optional = true }
once_cell = { version = "1.4.1", optional = true }

[dev-dependencies]
criterion = "0.3.3"
float-cmp = "0.8.0"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
jemallocator = "0.3.2"

[lib]
crate-type = ["cdylib", "lib"]
name = "boa"
bench = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "exec"
harness = false

[[bench]]
name = "full"
harness = false
