[package]
name = "Boa"
version = "0.11.0"
authors = ["boa-dev"]
description = "Boa is a Javascript lexer, parser and Just-in-Time compiler written in Rust. Currently, it has support for some of the language."
repository = "https://github.com/boa-dev/boa"
keywords = ["javascript", "compiler", "lexer", "parser", "js"]
categories = ["parser-implementations", "wasm"]
license = "Unlicense/MIT"
exclude = ["../.vscode/*", "../Dockerfile", "../Makefile", "../.editorConfig"]
edition = "2018"

[features]
profiler = ["measureme", "once_cell"]
deser = []

# Enable Bytecode generation & execution instead of tree walking
vm = []

# Enable Boa's WHATWG console object implementation.
console = []

[dependencies]
boa_unicode = { path = "../boa_unicode", version = "0.11.0" }
gc = { version = "0.4.1", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.68"
rand = "0.8.4"
num-traits = "0.2.14"
regress = "0.4.1"
rustc-hash = "1.1.0"
num-bigint = { version = "0.4.2", features = ["serde"] }
num-integer = "0.1.44"
bitflags = "1.3.2"
indexmap = "1.7.0"
ryu-js = "0.2.1"
chrono = "0.4.19"
fast-float = "0.2.0"
unicode-normalization = "0.1.19"
dyn-clone = "1.0.4"

# Optional Dependencies
measureme = { version = "9.1.2", optional = true }
once_cell = { version = "1.8.0", optional = true }

[dev-dependencies]
criterion = "0.3.5"
float-cmp = "0.9.0"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
jemallocator = "0.3.2"

[lib]
crate-type = ["cdylib", "lib"]
name = "boa"
bench = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "exec"
harness = false

[[bench]]
name = "full"
harness = false
