[package]
name = "Boa"
version = "0.13.0"
authors = ["boa-dev"]
description = "Boa is a Javascript lexer, parser and Just-in-Time compiler written in Rust. Currently, it has support for some of the language."
repository = "https://github.com/boa-dev/boa"
keywords = ["javascript", "compiler", "lexer", "parser", "js"]
categories = ["parser-implementations", "wasm"]
license = "Unlicense/MIT"
exclude = ["../.vscode/*", "../Dockerfile", "../Makefile", "../.editorConfig"]
edition = "2021"
rust-version = "1.57"

[features]
profiler = ["measureme"]
deser = ["boa_interner/serde"]

# Enable Boa's WHATWG console object implementation.
console = []

[dependencies]
boa_unicode = { path = "../boa_unicode", version = "0.13.0" }
boa_interner = { path = "../boa_interner", version = "0.13.0" }
gc = { version = "0.4.1", features = ["derive"] }
serde = { version = "1.0.132", features = ["derive", "rc"] }
serde_json = "1.0.75"
rand = "0.8.4"
num-traits = "0.2.14"
regress = "0.4.1"
rustc-hash = "1.1.0"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-integer = "0.1.44"
bitflags = "1.3.2"
indexmap = "1.8.0"
ryu-js = "0.2.2"
chrono = "0.4.19"
fast-float = "0.2.0"
unicode-normalization = "0.1.19"
dyn-clone = "1.0.4"
once_cell = "1.9.0"

# Optional Dependencies
measureme = { version = "10.0.0", optional = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.4", features = ["js"] }

[dev-dependencies]
criterion = "0.3.5"
float-cmp = "0.9.0"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
jemallocator = "0.3.2"

[lib]
crate-type = ["cdylib", "lib"]
name = "boa"
bench = false

[[bench]]
name = "full"
harness = false
