[package]
name = "boa_cli"
keywords = ["javascript", "compiler", "js", "cli"]
categories = ["command-line-utilities"]
default-run = "boa"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
boa_engine = { workspace = true, features = ["deser", "flowgraph", "trace"] }
boa_ast = { workspace = true, features = ["serde"] }
boa_parser.workspace = true
boa_gc.workspace = true
boa_interner.workspace = true
boa_runtime.workspace = true
rustyline = { version = "11.0.0", features = ["derive"]}
clap = { version = "4.3.5", features = ["derive"] }
serde_json = "1.0.97"
colored = "2.0.0"
regex = "1.8.4"
phf = { version = "0.11.2", features = ["macros"] }
pollster = "0.3.0"

[features]
default = ["boa_engine/annex-b", "boa_engine/intl"]

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = "0.5.0"

[[bin]]
name = "boa"
doc = false
path = "src/main.rs"
