[package]
name = "boa_cli"
keywords = ["javascript", "compiler", "js", "cli"]
categories = ["command-line-utilities"]
default-run = "boa"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
boa_engine = { workspace = true, features = ["deser", "flowgraph", "trace"] }
boa_parser.workspace = true
boa_gc.workspace = true
boa_interner.workspace = true
boa_runtime.workspace = true
rustyline = { version = "12.0.0", features = ["derive"]}
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
colored.workspace = true
regex.workspace = true
phf = { workspace = true, features = ["macros"] }
pollster.workspace = true
dhat = { version = "0.3.2", optional = true }

[features]
default = ["boa_engine/annex-b", "boa_engine/experimental", "boa_engine/intl"]
dhat = ["dep:dhat"]

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator.workspace = true

[[bin]]
name = "boa"
doc = false
path = "src/main.rs"
